--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="web-page">
       <div class="header">
-        <img src="/resources/Cactus.jpg" alt="Cactus">
+        <img src="./resources/Cactus.jpg" alt="Cacti">
       </div>
 
       <div class="design">
